<resources>
    <string name="app_name">projectLogin</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_item">take item</string>
    <string name="set_location">Set Location</string>
    <string name="enter_your_longitude">enter your longitude</string>
    <string name="enter_your_latitudes">enter your latitudes</string>
    <string name="item_delivered">item delivered</string>
</resources>